# piscine-python

day00/ex00/: Hello.py
day00/ex01/: format_ft_time.py
day00/ex02/: find_ft_type.py
day00/ex03/: NULL_not_found.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py
day00/ex09/ft_package/: README.md  pyproject.toml
day00/ex09/ft_package/src/ft_package/: core.py
day00/ex09/ft_package/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
day01/ex00/: give_bmi.py
day01/ex01/: array2D.py
day01/ex02/: load_image.py
day01/ex03/: load_image.py  zoom.py
day01/ex04/: load_image.py  rotate.py
day01/ex05/: load_image.py  pimp_image.py
day02/: traffic_total_deaths.csv
day02/ex00/: load_csv.py
day02/ex01/: aff_life.py
day02/ex02/: aff_pop.py  load_csv.py
day02/ex03/: projection_life.py
day03/ex01/: tester.py
day03/ex02/: DiamondTrap.py  S1E7.py
day03/ex03/: ft_calculator.py
day03/ex04/: ft_calculator.py  test.py
day04/ex00/: statistics.py
day04/ex01/: in_out.py
day04/ex02/: callLimit.py  tester  tester.py
day04/ex03/: new_student.py
