[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [{name = "Your Name", email = "eagle@42.fr"}]
readme = "README.md"
license = {text = "MIT"}
urls = { "Homepage" = "https://github.com/eagle/ft_package" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ft_package"]
